crates/config/tests/snapshots/key_value_brace_in_key.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-brace-in-key

## Input

```mical
foo{ value
a{b value

```

## JSON

```json
{
  "foo{": "value",
  "a{b": "value"
}
```

vim:ft=markdown
