crates/config/tests/snapshots/key_value_indented_quoted_key.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-indented-quoted-key

## Input

```mical
  "double" value
  'single' value

```

## JSON

```json
{
  "double": "value",
  "single": "value"
}
```

vim:ft=markdown
