crates/config/tests/snapshots/key_value_indented_word_key.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-indented-word-key

## Input

```mical
  key value
  count 42
  flag true
  neg -1

```

## JSON

```json
{
  "key": "value",
  "count": 42,
  "flag": true,
  "neg": -1
}
```

vim:ft=markdown
