crates/config/tests/snapshots/key_value_integer_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-integer-at-eof

## Input

```mical
a 42
```

## JSON

```json
{
  "a": 42
}
```

vim:ft=markdown
