crates/config/tests/snapshots/key_value_integer_like.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-integer-like

## Input

```mical
a 42 extra
b -10 trailing
c +5 trailing
d +
e -
f + 1
g - 1

```

## JSON

```json
{
  "a": "42 extra",
  "b": "-10 trailing",
  "c": "+5 trailing",
  "d": "+",
  "e": "-",
  "f": "+ 1",
  "g": "- 1"
}
```

vim:ft=markdown
