crates/config/tests/snapshots/key_value_line_string.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-line-string

## Input

```mical
key value
name hello world
path /usr/local/bin

```

## JSON

```json
{
  "key": "value",
  "name": "hello world",
  "path": "/usr/local/bin"
}
```

vim:ft=markdown
