crates/config/tests/snapshots/key_value_punct_key.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-punct-key

## Input

```mical
| value
> value
+ value
- value
{ value
} value

```

## JSON

```json
{
  "|": "value",
  ">": "value",
  "+": "value",
  "-": "value",
  "{": "value",
  "}": "value"
}
```

vim:ft=markdown
