crates/config/tests/snapshots/key_value_quoted_in_line_string.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-in-line-string

## Input

```mical
a hello "world" end
b start 'mid' end
c value "foo"
d value 'bar'

```

## JSON

```json
{
  "a": "hello \"world\" end",
  "b": "start 'mid' end",
  "c": "value \"foo\"",
  "d": "value 'bar'"
}
```

vim:ft=markdown
